--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["nodejs"]
+nixPkgs = ["nodejs_18"]
 
 [phases.install]
 cmds = ["npm install", "cd client && npm install"]
@@ -8,4 +8,4 @@ cmds = ["npm install", "cd client && npm install"]
 cmds = ["cd client && npm run build"]
 
 [start]
-cmd = "npm start" 
+cmd = "npm start"
